--- a/album.html
+++ b/album.html
@@ -230,7 +230,7 @@
 <!-- <body onload="login_show()"> -->
   <body>
 
-    <div id="loading"></div>
+    <!-- <div id="loading"></div> -->
 
     <script>
       $(window).on('load', function(){
