--- a/index.html
+++ b/index.html
@@ -359,20 +359,20 @@
         <div class="ind-cards-container">
 
             <div class="ind-card" onclick="link1()">
-                <img class="ind-img" src="img/img1.jpg">
+                <img class="ind-img" src="https://i9.ytimg.com/vi_webp/aH16QQoPQdk/maxresdefault.webp?v=63fb9a86&sqp=CJy17p8G&rs=AOn4CLBR9_yIZFG6zKDQP3i_hnLo4OfOlQ">
                 <img class="channel-img" src="img/avatar.jpg">
                 <div class="ind-details">
-                    <p class="ind-title">Sanjivani COE Status Video</p>
-                    <p class="ind-other-detail">Unofficial Mech <i class="fa fa-check-circle"></i> • 08 Jul 2022</p>
+                    <p class="ind-title">CRE Workshop Manmad | Full Video</p>
+                    <p class="ind-other-detail">Unofficial Mech <i class="fa fa-check-circle"></i> • 26 Feb 2023</p>
                 </div>
             </div>
 
             <div class="ind-card" onclick="link2()">
-                <img class="ind-img" src="img/img2.jpg">
+                <img class="ind-img" src="https://i9.ytimg.com/vi/we7Gl78NJCk/mqdefault.jpg?sqp=CJy17p8G-oaymwEoCMACELQB8quKqQMcGADwAQH4Ad4EgAK4CIoCDAgAEAEYZSBYKFAwDw==&rs=AOn4CLDTZesYtXWzlMLawOeFKenDNNFCaQ">
                 <img class="channel-img" src="img/avatar.jpg">
                 <div class="ind-details">
-                    <p class="ind-title">SANJIVANI COE | STATUS VIDEO #3</p>
-                    <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 26 Jun 2022</p>
+                    <p class="ind-title">(Shorts) CRE Workshop Manmad</p>
+                    <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 26 Feb 2023</p>
                 </div>
             </div>
 
