--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
             <div class="ind-card" onclick="link1()">
                 <img class="ind-img" src="https://i9.ytimg.com/vi_webp/aH16QQoPQdk/maxresdefault.webp?v=63fb9a86&sqp=CJy17p8G&rs=AOn4CLBR9_yIZFG6zKDQP3i_hnLo4OfOlQ">
-                <img class="channel-img" src="img/avatar.jpg">
+                <img class="channel-img" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677682645/mechanical/img/avatar_dg3u1m.jpg">
                 <div class="ind-details">
                     <p class="ind-title">CRE Workshop Manmad | Full Video</p>
                     <p class="ind-other-detail">Unofficial Mech <i class="fa fa-check-circle"></i> • 26 Feb 2023</p>
@@ -369,7 +369,7 @@
 
             <div class="ind-card" onclick="link2()">
                 <img class="ind-img" src="https://i9.ytimg.com/vi/we7Gl78NJCk/mqdefault.jpg?sqp=CJy17p8G-oaymwEoCMACELQB8quKqQMcGADwAQH4Ad4EgAK4CIoCDAgAEAEYZSBYKFAwDw==&rs=AOn4CLDTZesYtXWzlMLawOeFKenDNNFCaQ">
-                <img class="channel-img" src="img/avatar.jpg">
+                <img class="channel-img" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677682645/mechanical/img/avatar_dg3u1m.jpg">
                 <div class="ind-details">
                     <p class="ind-title">(Shorts) CRE Workshop Manmad</p>
                     <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 26 Feb 2023</p>
@@ -377,8 +377,8 @@
             </div>
 
             <div class="ind-card" onclick="link3()">
-                <img class="ind-img" src="img/img3.jpg">
-                <img class="channel-img" src="img/avatar.jpg">
+                <img class="ind-img" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677682649/mechanical/img/img3_ccopuk.jpg">
+                <img class="channel-img" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677682645/mechanical/img/avatar_dg3u1m.jpg">
                 <div class="ind-details">
                     <p class="ind-title">Oreo Biscuit Prank | PART 2</p>
                     <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 05 Jul 2022</p>
@@ -386,8 +386,8 @@
             </div>
 
             <div class="ind-card" onclick="link4()">
-                <img class="ind-img" src="img/img4.jpg">
-                <img class="channel-img" src="img/avatar.jpg">
+                <img class="ind-img" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677682649/mechanical/img/img4_boyn84.jpg">
+                <img class="channel-img" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677682645/mechanical/img/avatar_dg3u1m.jpg">
                 <div class="ind-details">
                     <p class="ind-title">Oreo Biscuit Prank | PART 1</p>
                     <p class="ind-other-detail">UNOFFICIAL MECH <i class="fa fa-check-circle"></i> • 29 Jun 2022</p>
@@ -400,9 +400,9 @@
         <section>
             <h1>Unofficial Album</h1>
             <h6>(Coming Soon)</h6>
-            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="memories/g3.jpg"> </div>
-            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="memories/g5.jpg"> </div>
-            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="memories/g4.jpg"> </div>
+            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677683161/mechanical/g3_k5mt5h.jpg"> </div>
+            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677683127/mechanical/g5_c8du51.jpg"> </div>
+            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677683142/mechanical/g4_v1ea9p.jpg"> </div>
         </section> <br>
         <hr width="95%">
         <div id="6koSC"></div> <br>
