--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
 
 
 
+
+
     @media screen and (max-width: 768px) {
     .nav-bar{
       position: fixed;
@@ -408,34 +410,28 @@
         <div id="6koSC"></div> <br>
         <hr width="95%"><br>
         <div class="card-container">
-            <div class="card-mech"> <br> <img class="avatar-img" src="img/profile-avatar.png">
+            <div class="card-mech"><center> <img class="avatar-img" src="img/profile-avatar.png"></center>
                 <div class="card-header">
-                    <h3>Sanjivani Mechanical LMS</h3>
+                    <center>
+                        <h3>Mechanical LMS</h3>
+                    </center>
                 </div>
                 <div class="body">
-                    <h6> Subjects: BME & EG<br><br>
+                    <h6> Subjects: BME & EG
                         <p class=""> <i class="fa fa-clock"></i> 10:00 am to 10:00 pm</p>
-                    </h6><br> <a class="mech-btn" onclick="error()">Learn More</a><br><br>
+                    </h6><br> <a class="mech-btn" onclick="error()">Learn More</a>
                 </div>
             </div>
-            <div class="card-mech"> <br> <img class="avatar-img" src="img/profile-avatar.png">
+            <div class="card-mech"><center> <img class="avatar-img" src="img/profile-avatar.png"></center>
                 <div class="card-header">
-                    <h3>Sanjivani Mechanical LMS</h3>
+                    <center>
+                        <h3>Mechanical LMS</h3>
+                    </center>
                 </div>
                 <div class="body">
-                    <h6> Subjects: BME & EG<br><br>
+                    <h6> Subjects: BME & EG
                         <p class=""> <i class="fa fa-clock"></i> 10:00 am to 10:00 pm</p>
-                    </h6> <br> <a class="mech-btn" onclick="error()">Learn More</a><br><br>
-                </div>
-            </div>
-            <div class="card-mech"> <br> <img class="avatar-img" src="img/profile-avatar.png">
-                <div class="card-header">
-                    <h3>Sanjivani Mechanical LMS</h3>
-                </div>
-                <div class="body">
-                    <h6> Subjects: BME & EG<br><br>
-                        <p class=""> <i class="fa fa-clock"></i> 10:00 am to 10:00 pm</p>
-                    </h6><br> <a class="mech-btn" onclick="error()">Learn More</a><br><br>
+                    </h6> <br> <a class="mech-btn" onclick="error()">Learn More</a>
                 </div>
             </div>
         </div> <br>
