--- a/album.html
+++ b/album.html
@@ -3,6 +3,7 @@
 <head>
   <!-- <link href="../rubproducti9n/mdb/css/global.min.css" rel="stylesheet"> -->
     <link href="css/global.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/global.restrict.css">
     <!-- <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet"> -->
     <!-- <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -471,7 +472,7 @@ function error(){alert("Something went wrong, please contact our team or try aga
 <script src="lib/navbar/assets/js/main.js"></script>
 <script src="js/album.js"></script>
 <script src="https://tholman.com/intense-images/js/intense.js"></script>
-<script src="https://rubyproducti9n.github.io/concertera/js/global.restrict.js"></script>
+<script src="js/global.restrict.js"></script>
 <!-- <script src="https://rubyproducti9n.github.io/concertera/mdb/js/global.min.js"></script> -->
 </body>
 </html>
