--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- <link href="../rubproducti9n/mdb/css/global.min.css" rel="stylesheet"> -->
+<link rel="stylesheet" href="css/global.restrict.css">
     <link href="css/global.min.css" rel="stylesheet"> <!-- <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet"> -->
     <!-- <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet"> -->
 
@@ -327,7 +328,6 @@
       <center>
       <p class="load-txt">
         <h3>Loading...</h3>
-        <h6>This may take a minute or several</h6>
 
       </p>
     </center>
@@ -474,7 +474,7 @@
         function error(){alert("Link expired")}
     </script>
     <script src="js/id/6koSC.js"></script>
-    <script src="https://rubyproducti9n.github.io/concertera/js/global.restrict.js"></script>
+    <script src="js/global.restrict.js"></script>
     <link rel="stylesheet" href="lib/navbar/assets/css/styles.css">
     <link rel="stylesheet" href="lib/toast/assets/notify.min.css" />
     <script src="lib/toast/assets/notify.min.js"></script>
