--- a/album.html
+++ b/album.html
@@ -303,20 +303,18 @@
   <div id="control" class="row">
     <div class="column">
       <!-- <div id="c1"></div> -->
-       <img draggable="false" oncontextmenu="return false;" src="memories/manmad workshop/img1.jpg" style="width:100%">
-  <img draggable="false" oncontextmenu="return false;" src="memories/manmad workshop/img2.jpg" style="width:100%">
-  <img draggable="false" oncontextmenu="return false;" src="memories/manmad workshop/img7.jpg" style="width:100%">
-  <img draggable="false" oncontextmenu="return false;" src="memories/manmad workshop/img5.jpg" style="width:100%">
+       <img draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1680069571/mechanical/memories/Yugotsav%202k23/g1_yokvrd.jpg" style="width:100%">
+  <img draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1680069571/mechanical/memories/Yugotsav%202k23/d1_q9nzcm.jpg" style="width:100%">
+  <img draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1680069591/mechanical/memories/Yugotsav%202k23/g2_marhzo.jpg" style="width:100%">
 
     </div>
     <div class="column">
       <!-- <div id="c2"></div> -->
 
-      <img draggable="false" oncontextmenu="return false;" src="memories/manmad workshop/img11.jpg" style="width:100%">
+      <img draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1680069553/mechanical/memories/Yugotsav%202k23/d2_wsfa8b.jpg" style="width:100%">
+      <img draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1680069582/mechanical/memories/Yugotsav%202k23/g3_la8awf.jpg" style="width:100%">
 
-      <img draggable="false" oncontextmenu="return false;" src="memories/img1.jpg" style="width:100%">
-      <img draggable="false" oncontextmenu="return false;" src="memories/m (12).jpg" style="width:100%">
-      <img draggable="false" oncontextmenu="return false;" src="memories/g12.jpg" style="width:100%">
+      <img draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1680069564/mechanical/memories/Yugotsav%202k23/d3_utysu1.jpg" style="width:100%">
     </div>
     <!-- <div class="column">
       <div id="c3"></div>
