--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
 
 
     @media screen and (max-width: 768px) {
+        body{
+            width: 95vw;
+            border: 0px #db0606f6 solid;
+            padding: 0px;
+            overflow-x: hidden;
+        }
     .nav-bar{
       position: fixed;
       top: 10px;
@@ -271,16 +277,15 @@
 
     .ind-cards-container{
         margin: 0;
-        overflow: hidden;
+        width: 100%;
     }
     .ind-card{
         background-color: rgb(245, 245, 245);
         margin: 30px 10px;
         padding-bottom: 20px;
-        border: 0px rgba(0, 0, 0, 0.26) solid;
+        border: 0px rgba(255, 7, 7, 0.808) solid;
         border-radius: 28px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.199);
-        overflow: hidden;
     }
     .ind-img{
         width: 100%;
@@ -413,15 +418,15 @@
         <hr width="95%"><br>
         <section>
             <h1>Unofficial Album</h1>
-            <h6>(Coming Soon)</h6>
-            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677683161/mechanical/g3_k5mt5h.jpg"> </div>
+            <h6>A Glimpse</h6>
+            <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1680069571/mechanical/memories/Yugotsav%202k23/g1_yokvrd.jpg"> </div>
             <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677683127/mechanical/g5_c8du51.jpg"> </div>
             <div class="card"> <img class="card-img blur" draggable="false" oncontextmenu="return false;" src="https://res.cloudinary.com/doojoolfr/image/upload/v1677683142/mechanical/g4_v1ea9p.jpg"> </div>
         </section> <br>
         <hr width="95%">
         <div id="6koSC"></div> <br>
         <hr width="95%"><br>
-        <div class="card-container">
+        <div class="card-container" style="display: none;">
             <div class="card-mech"><center> <img class="avatar-img" src="img/profile-avatar.png"></center>
                 <div class="card-header">
                     <center>
